# chinese_segmenter

./: CHANGELOG.md  Cargo.toml  README.md
data/: simplified.profile  traditional.profile
src/: chinese_segmenter.rs  lib.rs
